--- a/fitlink-app/package.json
+++ b/fitlink-app/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.7",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-reanimated": "^4.0.2",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
