--- a/fitlink-app/tsconfig.json
+++ b/fitlink-app/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "jsx": "react-jsx",
+    "types": ["react", "react-native"],
+    "skipLibCheck": true
   }
 }
