--- a/fitlink-app/tsconfig.json
+++ b/fitlink-app/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react-jsx",
+    "module": "ESNext",
     "types": ["react", "react-native"],
     "skipLibCheck": true
   }
