--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: fitlink-api
     env: php
-    buildCommand: composer install --no-dev --optimize-autoloader
+    buildCommand: chmod +x build.sh && ./build.sh
     startCommand: php artisan serve --host=0.0.0.0 --port=$PORT
     envVars:
       - key: APP_ENV
@@ -11,14 +11,42 @@ services:
         value: false
       - key: APP_KEY
         generateValue: true
+      - key: APP_URL
+        value: https://fitlink-api.onrender.com
       - key: DB_CONNECTION
         value: mysql
+      - key: DB_HOST
+        fromDatabase:
+          name: fitlink-db
+          property: host
+      - key: DB_PORT
+        fromDatabase:
+          name: fitlink-db
+          property: port
+      - key: DB_DATABASE
+        fromDatabase:
+          name: fitlink-db
+          property: database
+      - key: DB_USERNAME
+        fromDatabase:
+          name: fitlink-db
+          property: user
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: fitlink-db
+          property: password
       - key: CACHE_DRIVER
         value: file
       - key: SESSION_DRIVER
         value: file
       - key: QUEUE_CONNECTION
         value: sync
+      - key: LOG_CHANNEL
+        value: stack
+      - key: BROADCAST_DRIVER
+        value: log
+      - key: FILESYSTEM_DISK
+        value: local
 
 databases:
   - name: fitlink-db
