--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: php
     plan: free
     rootDir: backend
-    buildCommand: composer install --no-dev && php artisan key:generate && php artisan migrate --force
+    buildCommand: composer install --no-dev --optimize-autoloader && php artisan key:generate --force && php artisan migrate --force && php artisan config:cache && php artisan route:cache && php artisan view:cache
     startCommand: php artisan serve --host 0.0.0.0 --port $PORT
     envVars:
       - key: APP_ENV
